Aux_workspace/.metadata/.plugins/org.eclipse.cdt.ui/Tutorial.build.log
19:37:59 **** Incremental Build of configuration Debug for project Tutorial ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F072xB -DDEBUG -c -I../Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/CMSIS/Include -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'MX_GPIO_Init':
../Src/main.c:144:29: error: 'GPIO_MODE_PP' undeclared (first use in this function); did you mean 'GPIO_MODE_AF_PP'?
      GPIO_InitStruct.Mode = GPIO_MODE_PP;
                             ^~~~~~~~~~~~
                             GPIO_MODE_AF_PP
../Src/main.c:144:29: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c: At top level:
../Src/main.c:13:13: warning: 'MX_DAC_Init' used but never defined
 static void MX_DAC_Init(void);
             ^~~~~~~~~~~
make: *** [Src/subdir.mk:33: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

19:38:01 Build Failed. 2 errors, 1 warnings. (took 1s.963ms)

